--- a/WebBanHang/WebBanHang.csproj
+++ b/WebBanHang/WebBanHang.csproj
@@ -149,7 +149,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Images\BannerIphone.jpg" />
+    <Content Include="Images\BannerIPhone.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
